# tfeos

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  emulator_config.json  pyproject.toml
src/api/: app.py  routes.py
src/api/templates/: app_config.html  app_list.html  base.html
src/api/templates/components/: checkbox.html  color.html  dropdown.html  list.html  radio.html  slider.html  text.html
src/appkit/: base.py  config.py  graphics_helpers.py  manager.py  menu.py  validation.py
src/applications/clock/: app.py  config.json  dsl.json  metadata.json
src/applications/nhl/: app.py  config.json  dsl.json  metadata.json
src/applications/nhl/scenes/: favourite_team.py  games.py  next_game.py  nhl_api.py  standings.py
src/applications/screensaver/: app.py  metadata.json
src/applications/snake/: app.py  metadata.json
src/applications/ticker/: app.py  config.json  dsl.json  metadata.json
src/applications/weather/: app.py  config.json  dsl.json  metadata.json
src/tfeos/: input.py  logging.py  main.py  matrix.py
