[project]
name = "tfeos"
version = "0.1.0"
description = "Operating System for Matrix LED Panel"
authors = [{ name = "Kristopher Ruzic", email = "krruzic@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
packages = [
    { include = "tfeos", from = "src" },
    { include = "api", from = "src" },
    { include = "appkit", from = "src" },
]


dependencies = [
    "litestar (>=2.18.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sniffio (>=1.3.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tfo-os = "os.main:main"

[dependency-groups]
dev = ["rgbmatrixemulator (>=0.14.1,<0.15.0)"]
